--- a/src/FileExplorer/styles.scss
+++ b/src/FileExplorer/styles.scss
@@ -1,8 +1,7 @@
 @import "../common/variables";
 
 .file-explorer {
-  width: 100%;
-  height: 100%;
+  min-height: 100%;
   margin: 0;
   padding: 0;
   padding-top: 5px;
