--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,11 @@ html, body {
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  > #root {
+    width: 100vw;
+    height: 100vh;
+  }
 }
 
 code {
